# cs224n

./: .gitignore  README.md  pyproject.toml
2/: parser_model.py  parser_transitions.py  run.py
2/utils/: parser_utils.py
3/: beam_search_diagnostics.py  model_embeddings.py  nmt_model.py  run.py  run.sh  sanity_check.py  utils.py  vocab.py
3/nmt_local/: events.out.tfevents.1725556730.andrewhinh.3186545.0
3/outputs/: test_outputs.txt
3/outputs/beam_search_diagnostics/: 000200.json  000400.json  000600.json  000800.json  001000.json  001200.json  001400.json  001600.json  001800.json  002000.json  002200.json  002400.json  002600.json  002800.json  003000.json  003200.json  003400.json  003600.json  003800.json  004000.json  004200.json  004400.json  004600.json  004800.json  005000.json  005200.json  005400.json  005600.json  005800.json  006000.json  006200.json  006400.json  006600.json  006800.json  007000.json  007200.json  007400.json  007600.json  007800.json  008000.json  (+46 more)
3/runs/nmt/: events.out.tfevents.1725557200.andrewhinh.3192968.0  events.out.tfevents.1725598238.andrewhinh.3301712.0  (+1 more)
4/: rope.pretrain.dev.predictions  rope.pretrain.test.predictions  vanilla.nopretrain.dev.predictions  vanilla.nopretrain.test.predictions  vanilla.pretrain.dev.predictions  vanilla.pretrain.test.predictions
4/src/: attention.py  dataset.py  london_baseline.py  run.py
final/: bert.py  classifier.py  multitask_classifier.py  optimizer.py
final/predictions/: full-model-cfimdb-dev-out.csv  full-model-cfimdb-test-out.csv  full-model-sst-dev-out.csv  full-model-sst-test-out.csv  last-linear-layer-cfimdb-dev-out.csv  last-linear-layer-cfimdb-test-out.csv  last-linear-layer-sst-dev-out.csv  last-linear-layer-sst-test-out.csv  para-dev-output.csv  para-test-output.csv  sst-test-output.csv  sts-dev-output.csv  sts-test-output.csv
results/20240904_141859/: model.weights
results/20240904_142347/: model.weights
src/cs224n/: __init__.py
(+16 files in other folders)
