[project]
name = "cs224n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.1",
    "gensim>=4.3.3",
    "datasets==2.18.0",
    "docopt>=0.6.2",
    "tqdm>=4.66.5",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "modeldemo>=0.1.0",
    "cuda-python>=12.6.0",
    "scipy>=1.13.1",
    "nltk>=3.9.1",
    "sentencepiece>=0.2.0",
    "lxml==5.0.0",
    "sacrebleu>=2.4.3",
    "tensorboard>=2.17.1",
    "torchaudio>=2.4.0",
    "requests==2.25.1",
    "importlib-metadata==3.7.0",
    "filelock==3.0.12",
    "sklearn==0.0",
    "tokenizers==0.15",
    "explainaboard-client==0.0.7",
    "zipp==3.19.1",
    "chardet==4.0.0",
]
